# flightlang

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: hover_test.fl  survey.fl
flightlang/: __init__.py  astnodes.py  cli.py  codegen_python.py  lexer.py  parser.py  runtime.py  typecheck.py
