[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flightlang"
version = "0.1.0"
requires-python = ">=3.10"
description = "A tiny DSL for drone missions."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Brandon Himpfen" }
]
keywords = ["flightlang", "dsl", "drone", "uav", "missions", "autonomy"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Compilers",
  "Topic :: Scientific/Engineering"
]

[project.urls]
Homepage = "https://github.com/flightlang/flightlang"
Repository = "https://github.com/flightlang/flightlang"
Issues = "https://github.com/flightlang/flightlang/issues"

[project.scripts]
flight = "flightlang.cli:main"

[tool.setuptools.packages.find]
where = ["."]